# automated-research

./: .gitignore  git_lib_versions.py  main.py  pyproject.toml  requirements.txt
research_and_analyst/notebook/: test.ipynb
