[project]
name = "automated-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.120.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "structlog>=25.4.0",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
]
